<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Lab5_2</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="job_title">Job Title</string>
    <string name="finished">Finished</string>
    
    <string-array name="job_title">
        <item>None</item>
		<item>Doctor</item>
		<item>Builder</item>
		<item>Nurse</item>
		<item>Stripper</item>
		<item>Self-Employed</item>
		<item>Teacher</item>
		<item>Lecturer</item>
	</string-array>

</resources>
