<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true">

<LinearLayout 
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="#E6E6B8"
    android:orientation="vertical"
    tools:ignore="ObsoleteLayoutParam" >

    <TextView
        android:layout_width= "fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/submit" />
    
    <EditText
        android:id="@+id/name_field"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:hint="Enter Name"
        android:layout_marginLeft = "20dp"
        android:layout_marginRight = "20dp"
        android:layout_marginTop = "20dp"
    	android:layout_marginBottom = "20dp" />
    
    <RadioGroup android:id="@+id/gender_rg"
		android:orientation="horizontal"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginLeft = "20dp"
        android:layout_marginRight = "20dp"
        android:layout_marginTop = "20dp"
        android:layout_marginBottom = "20dp"
		android:background="@color/white"
		android:padding="5dp"
		android:checkedButton="@+id/male">
		<RadioButton
			android:id="@+id/male"
			android:text="@string/male" />
		<RadioButton
			android:id="@+id/female"
			android:text="@string/female" />
	</RadioGroup>
	
    <Spinner
    android:id="@+id/job_spinner"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft = "20dp"
    android:layout_marginRight = "20dp"
    android:layout_marginTop = "20dp"
    android:layout_marginBottom = "20dp"
    android:hint="@string/job_title" />
    
    <EditText
        android:id="@+id/age_field"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:hint="Enter Age"
        android:layout_marginLeft = "20dp"
        android:layout_marginRight = "20dp"
        android:layout_marginTop = "20dp"
    	android:layout_marginBottom = "20dp"
    	android:inputType="number" />
    
    <EditText
        android:id="@+id/budget_field"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:hint="Total Budget"
        android:layout_marginLeft = "20dp"
        android:layout_marginRight = "20dp"
        android:layout_marginTop = "20dp"
    	android:layout_marginBottom = "20dp"
    	android:inputType="number" />

    <EditText
        android:id="@+id/email_field"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:hint="Enter Email"
        android:layout_marginLeft = "20dp"
        android:layout_marginRight = "20dp"
        android:layout_marginTop = "20dp"
    	android:layout_marginBottom = "20dp"
    	android:inputType="textEmailAddress" />
    
    <Button
        android:id="@+id/submit_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft = "20dp"
        android:layout_marginRight = "20dp"
        android:layout_below="@+id/text_field"
        android:text="@string/submit" />
    <Button
        android:id="@+id/cancel_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft = "20dp"
        android:layout_marginRight = "20dp"
        android:layout_below="@+id/submit_button"
        android:text="@string/cancel" />

</LinearLayout>
</ScrollView>